# next

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  design.md  editor.py  level_template.json  todo.md
.github/workflows/: webassembly.yml
src/: CMakeLists.txt  Color.cpp  Color.h  GameMath.cpp  GameMath.h  GameState.cpp  GameState.h  Gui.cpp  Gui.h  Level.cpp  Level.h  LevelEditor.cpp  LevelEditor.h  Makefile  Player.cpp  Player.h  common.h  main.cpp  minshell.html  raylib_game
src/resources/: Dialog.json  Level.json  Level0.json
src/resources/levels/: Level0.json  Level1.json  Level2.json  Level3.json  Level4.json  Level5.json  Level6.json  Level7.json
tools/: editor.py
